<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DevicesFragment"
    android:padding="30dp">>

    <EditText
        android:layout_marginTop="70dp"
        android:id="@+id/vehicleNumber"
        android:inputType="textCapCharacters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicle_registration_number"/>

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/deviceCertificateNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/device_certificate_num" />

    <Button
        android:id="@+id/addDeviceDialogButton"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:text="@string/add_device" />

</FrameLayout>